fixed change tier minor alignment issue

--- a/frontend/assets/stylesheets/_ie9.scss
+++ b/frontend/assets/stylesheets/_ie9.scss
@@ -30,6 +30,7 @@
     padding-bottom: rem(70px)!important;
 }
 
+
 /* Tier ie9 fix
    ========================================================================== */
 .about-membership {
@@ -75,13 +76,11 @@
     }
 }
 
-.package--current {
-    padding-top: rem(23px);
-}
-
 .content__footer {
     clear: both;
 }
+
+
 /* Footer ie9 fix
    ========================================================================== */
 
